--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -23,14 +23,14 @@
     @Html.FormTextAreaFor(m => m.ShortDescription, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-medium" })
 
     <div class="form-group @(HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.FrameworkCodeName)))">
-        <a name="@Html.NameFor(m => m.FrameworkCodeName)"> </a>
+        <a name="@Html.NameFor(m => m.FrameworkCodeName).ToString().ToLower()"></a>
         <label for="@Html.NameFor(m => m.FrameworkCodeName)" class="form-label">Apprenticeship framework</label>
         @Html.DropDownListFor(m => m.FrameworkCodeName, Model.SectorsAndFrameworks, new { @class = "para-btm-margin chosen-select", style = "min-width: 50%;" })
         @Html.ValidationMessageFor(m => m.FrameworkCodeName)
     </div>
 
     <div class="form-group @(HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.ApprenticeshipLevel)))">
-        
+        <a name="@Html.NameFor(m => m.ApprenticeshipLevel).ToString().ToLower()"></a>
         <label class="form-label">Apprenticeship level</label>
         <div class="small-btm-margin clearfix">
             @* ReSharper disable once Html.IdNotResolved *@
