--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Vacancy.VacancyViewModel
+@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Web.Common.Validators.Extensions
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
@@ -55,8 +56,22 @@
                     <h3 class="bold-small">
                         @Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
                     </h3>
-                    
+
                     <p id="vacancy-wage">@Model.VacancySummaryViewModel.WageDisplayText</p>
+
+                    @if (Model.VacancySummaryViewModel.WageType != WageType.Custom)
+                    {
+                        <details>
+                            <summary>TODO: Wage explanation</summary>
+                            <div class="detail-content">
+                                The current National Minimum Wage (NMW) rate for an apprentice is £@Wages.ApprenticeMinimumWage per hour.
+                                This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.
+                                Apprentices must be paid at least the NMW rate for their age if they're aged 19 or over and have completed their first year.
+                                The current NMW rates are £@Wages.Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Over21NationalMinimumWage for anyone aged 21 and over.
+                                Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).    
+                            </div>
+                        </details>
+                    }
 
                     <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
                     <p id="vacancy-working-week" itemprop="workHours">@Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
