Removed todo from the candidate being over 18 warning.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -77,7 +77,7 @@
                     <p id="vacancy-working-week" itemprop="workHours">@Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
                         @if (Model.VacancySummaryViewModel.HoursPerWeek > 40)
                         {
-                            <br />@:(TODO: the hours are based on the candidate being over 18)
+                            <br />@:(the hours are based on the candidate being over 18)
                         }
                     </p>
                     <h3 class="bold-small">
