ui changes in line with prototype

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -36,17 +36,17 @@
     <div class="grid-wrapper">
         <div class="grid grid-1-1">
             <section class="font-xsmall">
-                <h2 class="heading-medium">Alerts</h2>
-                <ul class="list-text list-withicons">
-                    <li>
-                        <i class="fa fa-exclamation-circle the-icon"></i>You have 1 vacancy
-                        closing soon with 0 applications <a href="" class="link-unimp inl-block">Apprentice precision toolmaker</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-flag the-icon"></i>You have 12 new applications
-                        for the vacancy <a href="live-apprenticeship-summary.html" class="link-unimp inl-block">Mechanical Engineer - Precision Toolmaker</a>
-                    </li>
-                </ul>
+                @*<h2 class="heading-medium">Alerts</h2>
+    <ul class="list-text list-withicons">
+        <li>
+            <i class="fa fa-exclamation-circle the-icon"></i>You have 1 vacancy
+            closing soon with 0 applications <a href="" class="link-unimp inl-block">Apprentice precision toolmaker</a>
+        </li>
+        <li>
+            <i class="fa fa-flag the-icon"></i>You have 12 new applications
+            for the vacancy <a href="live-apprenticeship-summary.html" class="link-unimp inl-block">Mechanical Engineer - Precision Toolmaker</a>
+        </li>
+    </ul>*@
             </section>
         </div>
     </div>
