--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -11,7 +11,7 @@
 }
 
 <h1 class="heading-xlarge">
-    Select framework and level
+    Enter basic vacancy details
 </h1>
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.CreateVacancy, FormMethod.Post))
@@ -59,7 +59,7 @@
             <div class="form-group inline clearfix blocklabel-single hide-nojs">
                 <h3 class="heading-small">Manage application method</h3>
                 <p>
-                    Will this vacancy be managed through the recruit an apprentice
+                    Will this vacancy be managed through the find an apprentice
                     site?
                 </p>
                 @* ReSharper disable once Html.IdNotResolved *@
