--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -53,6 +53,15 @@
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
 
+                    <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
+                    <p id="vacancy-working-week" itemprop="workHours">
+                        @Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
+                        @if (Model.VacancySummaryViewModel.HoursPerWeek > 40)
+                        {
+                            <br/>@:(the hours are based on the candidate being over 18)
+                        }
+                    </p>
+                    
                     <h3 class="bold-small">
                         @Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
                     </h3>
@@ -72,16 +81,9 @@
                             </div>
                         </details>
                     }
-
-                    <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
-                    <p id="vacancy-working-week" itemprop="workHours">@Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
-                        @if (Model.VacancySummaryViewModel.HoursPerWeek > 40)
-                        {
-                            <br />@:(the hours are based on the candidate being over 18)
-                        }
-                    </p>
+                    
                     <h3 class="bold-small">
-                        Apprenticeship duration
+                        Expected duration
                         @if (ViewData.ModelState.HasWarningsFor("Duration"))
                         {
                             var message = ViewData.ModelState.WarningMessageFor("Duration");
@@ -124,45 +126,71 @@
             </div>
 
         </section>
-        <section class="section-border grid-wrapper" id="course-info">
-            <h2 class="heading-large">Requirements and prospects</h2>
-            <div class="grid grid-1-2">
-                <div class="inner-block-padr">
-                    <div class="text">
-                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredSkills))
-                        {
-                            <h3 class="heading-small">Desired skills</h3>
-                            <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredSkills)</p>
-                        }
-                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.PersonalQualities))
-                        {
-                            <h3 class="heading-small">Personal qualities</h3>
-                            <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.PersonalQualities)</p>
-                        }
-                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications))
-                        {
-                            <h3 class="heading-small">Qualifications required</h3>
-                            <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications)</p>
-                        }
+<section class="section-border grid-wrapper" id="course-info">
+    <h2 class="heading-large">Requirements and prospects</h2>
+    <div class="grid grid-1-2">
+        <div class="inner-block-padr">
+            <div class="text">
+                @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredSkills))
+                {
+                    <h3 class="heading-small">Desired skills</h3>
+                    <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredSkills)</p>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.PersonalQualities))
+                {
+                    <h3 class="heading-small">Personal qualities</h3>
+                    <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.PersonalQualities)</p>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications))
+                {
+                    <h3 class="heading-small">Qualifications required</h3>
+                    <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications)</p>
+                }
 
-                    </div>
-                </div>
             </div>
-            <div class="grid grid-1-2">
+        </div>
+    </div>
+    <div class="grid grid-1-2">
+        <div class="text">
+            @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
+            {
+                <h3 class="heading-small">Future prospects</h3>
+                <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.FutureProspects)</p>
+            }
+            @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
+            {
+                <h3 class="heading-small">Things to consider</h3>
+                <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider)</p>
+            }
+        </div>
+    </div>
+</section>
+
+
+@if (!string.IsNullOrWhiteSpace(Model.VacancyQuestionsViewModel.FirstQuestion)
+            || !string.IsNullOrWhiteSpace(Model.VacancyQuestionsViewModel.SecondQuestion))
+    {
+    
+    <section class="section-border grid-wrapper" id="course-info">
+        <h2 class="heading-large">Questions for candidates</h2>
+        <div class="grid grid-1-2">
+            <div class="inner-block-padr">
                 <div class="text">
-                    @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
+                    @if (!string.IsNullOrWhiteSpace(Model.VacancyQuestionsViewModel.FirstQuestion))
                     {
-                        <h3 class="heading-small">Future prospects</h3>
-                        <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.FutureProspects)</p>
+                        <h3 class="heading-small">First question</h3>
+                        <p>@Html.Raw(Model.VacancyQuestionsViewModel.FirstQuestion)</p>
                     }
-                    @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
+                    @if (!string.IsNullOrWhiteSpace(Model.VacancyQuestionsViewModel.SecondQuestion))
                     {
-                        <h3 class="heading-small">Things to consider</h3>
-                        <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider)</p>
+                        <h3 class="heading-small">Second question</h3>
+                        <p>@Html.Raw(Model.VacancyQuestionsViewModel.SecondQuestion)</p>
                     }
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    }
         <section class="section-border" id="employer-info">
             <h2 class="heading-large">About the employer</h2>
             <div class="grid-wrapper">
