Save the date and time an application has been submitted.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -6,7 +6,7 @@
     case ProviderVacancyStatuses.Draft:
         <span class="tag-draft">@Model</span>
         break;
-    case ProviderVacancyStatuses.ToReview:
+    case ProviderVacancyStatuses.PendingQA:
         <span class="tag-pending">@Model</span>
         break;
     default:
