Added a DisplayTemplate for status.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -73,7 +73,7 @@
                                         <div>@vacancy.VacancyReferenceNumber</div>
                                     </td>
                                     <td>
-                                        <div>@vacancy.Status</div>
+                                        @Html.DisplayFor(model => vacancy.Status)
                                     </td>
                                     <td>
                                         <div>@vacancy.ProviderName</div>
