--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -29,6 +29,7 @@
     <div class="form-group">
         <div class="blocklabel-single-container">
             <div class="form-group inline clearfix blocklabel-single hide-nojs">
+                <a name="@Html.NameFor(m => m.TrainingType).ToString().ToLower()"></a>
                 <p>Training type</p>
                 @* ReSharper disable once Html.IdNotResolved *@
                 <label data-target="training-type-frameworks-panel" for="training-type-frameworks" class="block-label @frameworksSelected">
