--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderSiteViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Edit Site";
 }
