updated viewmodel references in views

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderSiteEmployerLinkViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteEmployerLinkViewModel
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
     ViewBag.Title = "Recruit an Apprentice - Add employer description";
