--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -4,7 +4,7 @@
 @using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.Constants
 @{
-    ViewBag.Title = "Recruit an Apprentice - Preview vacancy";
+    ViewBag.Title = "Manage a vacancy - Review vacancy";
 }
 
 <div>
@@ -297,7 +297,7 @@
 
     <section>
         <div class="form-group">
-            <button type="submit" class="button">Submit for approval</button>
+            <button type="submit" class="button">Approve</button>
             <a id="dashboardLink" href="@Url.RouteUrl(ManagementRouteNames.LandingPage)">Return to dashboard</a>
         </div>
     </section>
