Fixed viewmodel references in recruit site view templates

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -1,5 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@using SFA.Apprenticeships.Web.Recruit.ViewModels.VacancyPosting
+﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyPosting
+@using SFA.Apprenticeships.Web.Recruit.Constants
 @model EmployerSearchViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Select an employer for your vacancy";
