--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@using SFA.Apprenticeships.Web.Recruit.ViewModels.VacancyPosting
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyPosting
 
 @model EmployerSearchViewModel
 
