US937 - Rudementary locking on the dashboard

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -85,7 +85,10 @@
                                         <div>@vacancy.ClosingDate.ToFriendlyClosingToday()</div>
                                     </td>
                                     <td>
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = vacancy.VacancyReferenceNumber })">QA vacancy</a>
+                                        @if (vacancy.CanBeReservedForQaByCurrentUser)
+                                        {
+                                            <a href="@Url.RouteUrl(ManagementRouteNames.ReviewVacancy, new {vacancyReferenceNumber = vacancy.VacancyReferenceNumber})">QA vacancy</a>
+                                        }
                                     </td>
                                 </tr>
                             }
