Added "Return to linked employers" link

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -47,6 +47,7 @@
                 <button id="ern-search-button" type="submit" class="button">
                     Find employer
                 </button>
+                <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Return to linked employers</a>
             </div>
         }
 
@@ -62,6 +63,7 @@
                 <button id="name-location-search-button" type="submit" class="button">
                     Search
                 </button>
+                <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Return to linked employers</a>
             </div>
         }
     </div>
