Start working on saving changes in edit summary

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
@@ -12,7 +12,7 @@
     Enter vacancy details
 </h1>
 
-@using (Html.BeginRouteForm(ManagementRouteNames.SaveSummary, FormMethod.Post))
+@using (Html.BeginRouteForm(ManagementRouteNames.Summary, FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -78,7 +78,6 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button" name="VacancySummary" value="VacancySummary">Save and continue</button>
-        <button id="vacancySummaryAndExit" type="submit" class="button-link" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
+        <button type="submit" class="button">Save</button>
     </div>
 }
