WIP edit basic details QA journey

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EditBasicDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EditBasicDetails.cshtml
@@ -23,6 +23,8 @@
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
+    @Html.EditorFor(m => m.Comment, "Comment")
+
     @Html.FormTextAreaFor(m => m.Title, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-small" })
     @Html.FormTextAreaFor(m => m.ShortDescription, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-medium" })
 
